--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "classnames": "^2.5.1",
+    "eslint": "8.22.0",
     "node-sass": "npm:sass@^1.70.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
